--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -7,116 +7,115 @@
     android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.effone.hostismeandroid.MainActivity"
-
     tools:showIn="@layout/app_bar_main">
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight=".60"
-        android:weightSum="1"
-        android:background="@android:color/transparent">
-    <cn.trinea.android.view.autoscrollviewpager.AutoScrollViewPager
-        android:id="@+id/view_pager"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_weight="1.08"
-        android:background="@android:color/transparent">
+        android:background="@android:color/transparent"
+        android:weightSum="1">
 
-    </cn.trinea.android.view.autoscrollviewpager.AutoScrollViewPager>
+        <cn.trinea.android.view.autoscrollviewpager.AutoScrollViewPager
+            android:id="@+id/view_pager"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_weight="1.08"
+            android:background="@android:color/transparent">
+
+        </cn.trinea.android.view.autoscrollviewpager.AutoScrollViewPager>
 
         <android.support.design.widget.TabLayout
             android:id="@+id/tab_layout"
             android:layout_width="match_parent"
             android:layout_height="20dp"
+            android:layout_alignParentBottom="true"
             android:foregroundGravity="bottom"
             android:keepScreenOn="true"
-            android:layout_alignParentBottom="true"
             app:tabBackground="@drawable/tab_selector"
             app:tabGravity="center"
             app:tabIndicatorHeight="0dp" />
 
     </RelativeLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:weightSum="3"
         android:background="@color/colorPrimary"
-        android:orientation="vertical">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/linearLayout"
-        android:layout_weight="1"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:clickable="true"
-        android:orientation="horizontal"
-        >
+        android:orientation="vertical"
+        android:weightSum="3">
 
-        <TextView
-            style="@style/HomepageTextView"
-            android:id="@+id/btn_book_table"
-            android:drawableTop="@drawable/book_table"
-            android:text="Book a Table"
-            />
-        <TextView
-            style="@style/HomepageTextView"
-            android:id="@+id/btn_res_menu"
-            android:drawableTop="@drawable/res_menu"
-            android:text="Menu"
-           />
-    </LinearLayout>
         <LinearLayout
+            android:id="@+id/linearLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/linearLayout1"
-            android:layout_weight="1"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
+            android:layout_weight="1"
             android:clickable="true"
-            android:orientation="horizontal"
-            >
+            android:orientation="horizontal">
+
             <TextView
+                android:id="@+id/btn_book_table"
                 style="@style/HomepageTextView"
+                android:drawableTop="@drawable/book_table"
+                android:text="Book a Table" />
+
+            <TextView
+                android:id="@+id/btn_res_menu"
+                style="@style/HomepageTextView"
+                android:drawableTop="@drawable/res_menu"
+                android:text="Menu" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/linearLayout1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_weight="1"
+            android:clickable="true"
+            android:orientation="horizontal">
+
+            <TextView
                 android:id="@+id/btn_res_list"
+                style="@style/HomepageTextView"
                 android:drawableTop="@drawable/resturant_list"
                 android:text="Restaurant List"
 
                 />
+
             <TextView
-                style="@style/HomepageTextView"
                 android:id="@+id/btn_appointments"
+                style="@style/HomepageTextView"
                 android:drawableTop="@drawable/service_request"
-                android:text="@string/request_service"
-                />
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/linearLayout2"
-        android:layout_weight="1"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:clickable="true"
-        android:orientation="horizontal"
-        >
+                android:text="@string/request_service" />
+        </LinearLayout>
 
-        <TextView
-            style="@style/HomepageTextView"
-            android:id="@+id/btn_view_pay"
-            android:drawableTop="@drawable/view_and_pay_bill"
-            android:text="View  &amp; Pay Bill"
-            />
-        <TextView
-            style="@style/HomepageTextView"
-            android:id="@+id/btn_my_booking"
-            android:drawableTop="@drawable/my_booking"
-            android:text="@string/booking_history"
-            />
-    </LinearLayout>
+        <LinearLayout
+            android:id="@+id/linearLayout2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_weight="1"
+            android:clickable="true"
+            android:orientation="horizontal">
 
-    </LinearLayout>
+            <TextView
+                android:id="@+id/btn_view_pay"
+                style="@style/HomepageTextView"
+                android:drawableTop="@drawable/view_and_pay_bill"
+                android:text="View  &amp; Pay Bill" />
 
+            <TextView
+                android:id="@+id/btn_my_booking"
+                style="@style/HomepageTextView"
+                android:drawableTop="@drawable/my_booking"
+                android:text="@string/booking_history" />
+        </LinearLayout>
+    </LinearLayout>
 </LinearLayout>
