--- a/app/src/main/res/layout/activity_confiramtion.xml
+++ b/app/src/main/res/layout/activity_confiramtion.xml
@@ -69,7 +69,7 @@
                 android:id="@+id/ic_bill_details"
                 android:layout_width="match_parent"
                 layout="@layout/bill_details"
-                android:layout_height="449dp"
+                android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:layout_below="@+id/tv_order_Summery" />
