--- a/app/src/main/res/layout/activity_view_bill.xml
+++ b/app/src/main/res/layout/activity_view_bill.xml
@@ -1,86 +1,94 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-    <android.support.design.widget.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/appbAR"
-        android:theme="@style/AppTheme.AppBarOverlay">
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
+        <android.support.design.widget.AppBarLayout
+            android:id="@+id/appbAR"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+            android:layout_height="wrap_content"
+            android:theme="@style/AppTheme.AppBarOverlay">
 
-    </android.support.design.widget.AppBarLayout>
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:background="?attr/colorPrimary"
+                app:popupTheme="@style/AppTheme.PopupOverlay" />
+
+        </android.support.design.widget.AppBarLayout>
+
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@+id/appbAR">
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="5dp">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:id="@+id/linearLayout3"
-        android:weightSum="1">
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:padding="5dp">
 
-        <TextView
-            android:id="@+id/compalint"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/linearLayout"
-            android:text="@string/bill_details"
-            android:textColor="@color/fontColor"
-            android:textStyle="bold"
-            android:paddingBottom="4dp"
-            android:textSize="18sp" />
+                <LinearLayout
+                    android:id="@+id/linearLayout3"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:weightSum="1">
 
-        <include layout="@layout/bill_detail"
-            android:layout_height="wrap_content"
-            android:layout_width="match_parent"
-            android:id="@+id/payment"
-            android:layout_below="@+id/linearLayout3"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
-</LinearLayout>
-        <include layout="@layout/promo_code"
-            android:layout_height="wrap_content"
-            android:layout_width="match_parent"
-            android:id="@+id/payment"
-            android:layout_below="@+id/linearLayout3"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
-    <include layout="@layout/bill_details"
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        android:id="@+id/includes"
-        android:layout_below="@+id/payment"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+                    <TextView
+                        android:id="@+id/compalint"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/linearLayout"
+                        android:paddingBottom="4dp"
+                        android:text="@string/bill_details"
+                        android:textColor="@color/fontColor"
+                        android:textSize="18sp"
+                        android:textStyle="bold" />
 
-    <include
-        layout="@layout/payment_type"
-        android:layout_height="match_parent"
-        android:layout_width="match_parent"
-        android:layout_below="@+id/includes"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-    </RelativeLayout>
+                    <include
+                        android:id="@+id/payment"
+                        layout="@layout/bill_detail"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentLeft="true"
+                        android:layout_alignParentStart="true"
+                        android:layout_below="@+id/linearLayout3" />
+                </LinearLayout>
 
-</ScrollView>
+                <include
+                    android:id="@+id/payment"
+                    layout="@layout/promo_code"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_below="@+id/linearLayout3" />
+
+                <include
+                    android:id="@+id/includes"
+                    layout="@layout/bill_details"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_below="@+id/payment" />
+
+                <include
+                    layout="@layout/payment_type"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_below="@+id/includes" />
+            </RelativeLayout>
+
+        </ScrollView>
     </RelativeLayout>
 </RelativeLayout>
