--- a/app/src/main/res/layout/bill_details.xml
+++ b/app/src/main/res/layout/bill_details.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/tv_bill_table"
@@ -29,9 +28,9 @@
         <ListView
             android:id="@+id/lv_items_list"
             android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:layout_marginBottom="5dp"
-            android:layout_marginTop="5dp"
+            android:layout_height="250dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
             android:divider="@null"
             android:nestedScrollingEnabled="true" />
 
@@ -68,7 +67,7 @@
         <ListView
             android:id="@+id/lv_tax_menu"
             android:layout_width="match_parent"
-            android:layout_height="120dp"
+            android:layout_height="150dp"
             android:layout_below="@+id/line2"
             android:divider="@null"
             android:dividerHeight="0dp"
@@ -108,5 +107,6 @@
             android:textStyle="bold" />
 
     </RelativeLayout>
+
 
 </RelativeLayout>
