--- a/app/src/main/res/layout/activity_view_cart.xml
+++ b/app/src/main/res/layout/activity_view_cart.xml
@@ -161,7 +161,7 @@
                 android:textColor="@android:color/white"
                 android:textSize="24sp" />
 
-            <EditText
+            <Spinner
                 android:id="@+id/et_table_no"
                 android:layout_width="70dp"
                 android:layout_height="wrap_content"
@@ -176,8 +176,8 @@
                 android:padding="4dp"
                 android:textCursorDrawable="@drawable/custom_edit_text_cursor">
 
-                <requestFocus />
-            </EditText>
+
+            </Spinner>
 
         </RelativeLayout>
 
