--- a/app/src/main/res/layout/summery_list_item.xml
+++ b/app/src/main/res/layout/summery_list_item.xml
@@ -41,13 +41,13 @@
 
     <TextView
         android:id="@+id/tv_service_charges"
-        android:layout_width="wrap_content"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/charges_heading"
-        android:text="Serv. Charge"
         android:layout_marginLeft="5dp"
+        android:text="Serv. Charge"
         android:textSize="12sp" />
 
     <TextView
@@ -97,18 +97,19 @@
 
     <LinearLayout
         android:id="@+id/btn_lay"
-        android:layout_width="60dp"
+        android:layout_width="50dp"
         android:layout_height="40dp"
         android:background="@drawable/rounded_corner"
         android:orientation="horizontal"
         android:layout_below="@+id/tv_total"
-        android:layout_alignStart="@+id/ll_checkboxItems">
+        android:layout_alignStart="@+id/ll_checkboxItems"
+        android:layout_alignEnd="@+id/tv_service_charges">
 
         <TextView
             android:id="@+id/tv_minus"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="1"
+            android:layout_weight="0.9"
             android:gravity="center"
             android:text="-"
             android:textSize="12sp" />
@@ -117,7 +118,7 @@
             android:id="@+id/tv_qutity"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="1"
+            android:layout_weight="1.2"
             android:background="@color/payment_btn_color"
             android:gravity="center"
             android:text="10"
@@ -128,7 +129,7 @@
             android:id="@+id/tv_plus"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="1"
+            android:layout_weight="0.9"
             android:gravity="center"
             android:text="+"
             android:textSize="12sp" />
