--- a/app/src/main/res/layout/activity_view_cart.xml
+++ b/app/src/main/res/layout/activity_view_cart.xml
@@ -4,10 +4,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+
     <android.support.design.widget.AppBarLayout
+        android:id="@+id/titel_na"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/titel_na"
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.v7.widget.Toolbar
@@ -42,64 +43,64 @@
             android:id="@+id/relative_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/payment_background"
-            android:padding="5dp"
-            android:layout_below="@+id/price_summary"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true">
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/price_summary"
+            android:background="@drawable/payment_background"
+            android:padding="5dp">
 
             <TextView
                 android:id="@+id/tv_items"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignEnd="@+id/tv_estimated"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_alignRight="@+id/tv_estimated"
                 android:layout_marginBottom="3dp"
                 android:text="@string/items"
                 android:textColor="@color/fontColor"
-                android:textSize="15sp"
-                android:layout_alignRight="@+id/tv_estimated"
-                android:layout_alignEnd="@+id/tv_estimated"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true" />
+                android:textSize="15sp" />
 
             <TextView
                 android:id="@+id/tv_chargrss"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignEnd="@+id/tv_items"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_alignRight="@+id/tv_items"
                 android:layout_below="@+id/tv_items"
                 android:layout_marginBottom="10dp"
                 android:text="@string/charges"
                 android:textColor="@color/fontColor"
-                android:textSize="15sp"
-                android:layout_alignRight="@+id/tv_items"
-                android:layout_alignEnd="@+id/tv_items"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true" />
+                android:textSize="15sp" />
 
             <TextView
                 android:id="@+id/tv_estimated"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/tv_chargrss"
+                android:layout_marginBottom="15dp"
                 android:text="@string/estimated_total"
                 android:textColor="@color/fontColor"
                 android:textSize="15sp"
-                android:layout_marginBottom="15dp"
-                android:textStyle="bold"
-                android:layout_below="@+id/tv_chargrss"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true" />
+                android:textStyle="bold" />
 
             <Switch
                 android:id="@+id/cb_take_away"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="5dp"
-                android:thumbTint="@android:color/holo_green_light"
-                android:trackTint="@android:color/holo_green_light"
-                android:text="Take Away"
-                android:textSize="15sp"
-                android:textColor="@color/fontColor"
+                android:layout_alignParentEnd="true"
                 android:layout_below="@+id/tv_estimated"
-                android:layout_alignParentEnd="true" />
+                android:layout_marginBottom="5dp"
+                android:text="Take Away"
+                android:textColor="@color/fontColor"
+                android:textSize="15sp"
+                android:thumbTint="@android:color/holo_green_light"
+                android:trackTint="@android:color/holo_green_light" />
 
             <TextView
                 android:id="@+id/tableNo"
@@ -169,10 +170,10 @@
                 android:layout_alignParentRight="true"
                 android:layout_below="@+id/cb_take_away"
                 android:background="@drawable/payment_background"
-                android:inputType="number"
                 android:gravity="center"
-                android:maxLength="5"
                 android:imeOptions="actionDone"
+                android:inputType="number"
+                android:maxLength="5"
                 android:padding="4dp"
                 android:textCursorDrawable="@drawable/custom_edit_text_cursor">
 
@@ -185,22 +186,42 @@
             android:id="@+id/item_summary"
             android:layout_width="match_parent"
             android:layout_height="30dp"
-            android:gravity="left|bottom"
             android:layout_below="@+id/relative_layout"
+            android:gravity="left|bottom"
             android:paddingBottom="3dp"
             android:text="@string/item_summary"
             android:textColor="@color/fontColor"
             android:textSize="18sp"
             android:textStyle="bold" />
 
-        <ListView
-            android:id="@+id/item_summery_list"
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_below="@+id/item_summary"
             android:layout_marginBottom="6dp"
             android:background="@drawable/payment_background"
-            android:padding="5dp" />
+            android:padding="5dp">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+            <ListView
+                android:id="@+id/item_summery_list"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+
+                />
+                <ListView
+                    android:id="@+id/lv_tax_menu"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:layout_below="@+id/line2"
+                    android:divider="@null"
+                    android:dividerHeight="0dp"
+                    android:nestedScrollingEnabled="true" />
+            </LinearLayout>
+        </ScrollView>
     </RelativeLayout>
 
 
