--- a/app/src/main/res/layout/summery_list_item.xml
+++ b/app/src/main/res/layout/summery_list_item.xml
@@ -36,6 +36,7 @@
         android:layout_alignParentStart="true"
         android:layout_below="@+id/tv_summery_item_name"
         android:text="Charges"
+        android:visibility="gone"
         android:textSize="14sp"
         android:textStyle="bold" />
 
@@ -48,6 +49,7 @@
         android:layout_below="@+id/charges_heading"
         android:layout_marginLeft="5dp"
         android:text="Serv. Charge"
+        android:visibility="gone"
         android:textSize="12sp" />
 
     <TextView
@@ -58,6 +60,8 @@
         android:layout_alignParentStart="true"
         android:layout_below="@+id/tv_service_charges"
         android:text="VAT. Tax"
+
+        android:visibility="gone"
         android:layout_marginLeft="5dp"
         android:textSize="12sp" />
 
@@ -70,6 +74,7 @@
         android:layout_below="@+id/tv_service_charges"
         android:text="$ 3.6"
         android:gravity="right"
+        android:visibility="gone"
         android:textSize="12sp"
         android:layout_alignLeft="@+id/tv_service_charges_value"
         android:layout_alignStart="@+id/tv_service_charges_value" />
@@ -80,6 +85,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/tv_vat"
         android:text="Serv. Tax"
+        android:visibility="gone"
         android:layout_marginLeft="5dp"
         android:textSize="12sp" />
 
@@ -88,6 +94,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="$ 120.00"
+        android:visibility="gone"
         android:layout_marginTop="23dp"
         android:textSize="@dimen/text_size_small"
         android:textStyle="bold"
@@ -97,13 +104,15 @@
 
     <LinearLayout
         android:id="@+id/btn_lay"
-        android:layout_width="50dp"
-        android:layout_height="40dp"
+        android:layout_width="90dp"
+        android:layout_height="30dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         android:background="@drawable/rounded_corner"
         android:orientation="horizontal"
-        android:layout_below="@+id/tv_total"
-        android:layout_alignStart="@+id/ll_checkboxItems"
-        android:layout_alignEnd="@+id/tv_service_charges">
+        android:layout_below="@+id/ll_checkboxItems"
+        android:layout_alignParentLeft="true"
+        >
 
         <TextView
             android:id="@+id/tv_minus"
@@ -169,20 +178,11 @@
         android:text="$ 6.0"
         android:gravity="right"
         android:textSize="12sp"
+        android:visibility="gone"
         android:layout_alignLeft="@+id/tv_vat_value"
         android:layout_alignStart="@+id/tv_vat_value" />
 
-    <LinearLayout
-        android:id="@+id/ll_checkboxItems"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@+id/btn_lay"
-        android:layout_alignStart="@+id/tv_service_tax"
-        android:layout_toStartOf="@+id/tv_total"
-        android:orientation="horizontal"
-        android:layout_below="@+id/tv_tax_items">
 
-    </LinearLayout>
 
     <TextView
         android:id="@+id/tv_tax_items"
@@ -191,6 +191,7 @@
         android:layout_alignParentEnd="true"
         android:layout_below="@+id/tv_service_tax_value"
         android:gravity="right"
+        android:visibility="gone"
         android:text="0.6"
         android:layout_alignStart="@+id/tv_service_tax_value" />
 
@@ -198,11 +199,27 @@
         android:id="@+id/tax4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/tv_service_tax"
         android:layout_weight="1"
         android:textSize="12sp"
+        android:visibility="gone"
         android:layout_marginLeft="5dp"
-        android:text="TextView" />
+        android:text="TextView"
+        android:layout_below="@+id/tv_summery_item_name"
+        android:layout_alignEnd="@+id/tv_summery_item_name" />
+
+    <LinearLayout
+        android:id="@+id/ll_checkboxItems"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_below="@+id/tv_summery_item_name"
+        android:layout_toEndOf="@+id/charges_heading">
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="DD" />
+    </LinearLayout>
 
 </RelativeLayout>
