--- a/app/src/main/res/layout/activity_view_cart.xml
+++ b/app/src/main/res/layout/activity_view_cart.xml
@@ -220,6 +220,48 @@
                     android:divider="@null"
                     android:dividerHeight="0dp"
                     android:nestedScrollingEnabled="true" />
+
+
+                <View
+                    android:id="@+id/line3"
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_below="@+id/lv_tax_menu"
+                    android:background="@color/fontColor" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal"
+                    android:weightSum="1">
+                    <TextView
+                    android:id="@+id/tv_order_total"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/line3"
+                    android:gravity="left"
+                    android:padding="7dp"
+                    android:text="@string/order_total"
+
+                    android:textColor="@color/fontColor"
+                    android:textSize="18sp"
+                    android:textStyle="bold"
+                        android:layout_weight="0.98" />
+
+                <TextView
+                    android:id="@+id/tv_total_price"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_below="@+id/line3"
+                    android:gravity="center"
+                    android:padding="7dp"
+                    android:text="$20.00"
+                    android:textColor="@android:color/holo_red_light"
+                    android:textStyle="bold" />
+                </LinearLayout>
+
+
             </LinearLayout>
         </ScrollView>
     </RelativeLayout>
