--- a/app/src/main/res/layout/menu_list_item.xml
+++ b/app/src/main/res/layout/menu_list_item.xml
@@ -80,7 +80,7 @@
     <TextView
         android:id="@+id/tv_add_item"
         android:layout_width="60dp"
-        android:layout_height="40dp"
+        android:layout_height="50dp"
         android:layout_alignParentRight="true"
         android:layout_below="@+id/tv_price"
         android:layout_marginTop="10dp"
@@ -94,14 +94,14 @@
         />
 
     <LinearLayout
+        android:id="@+id/ll_checkboxItems"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/tv_add_item"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/tv_ingredients"
-        android:orientation="horizontal"
-        android:id="@+id/ll_checkboxItems"
         android:layout_toStartOf="@+id/btn_lay"
-        android:layout_alignBottom="@+id/tv_add_item"></LinearLayout>
+        android:orientation="horizontal"></LinearLayout>
 
 
 </RelativeLayout>
