--- a/app/src/main/res/layout/activity_view_cart.xml
+++ b/app/src/main/res/layout/activity_view_cart.xml
@@ -111,7 +111,7 @@
                 android:layout_alignParentStart="true"
                 android:layout_below="@+id/cb_take_away"
                 android:gravity="left|center"
-                android:text="Enter Table No  "
+                android:text="Table No  "
                 android:textSize="15sp"
                 android:textStyle="bold" />
 
@@ -209,14 +209,25 @@
             <ListView
                 android:id="@+id/item_summery_list"
                 android:layout_width="match_parent"
-                android:layout_height="48dp"
-
+                android:layout_height="250dp"
+                android:divider="@null"
+                android:nestedScrollingEnabled="true"
                 />
+                <View
+                    android:id="@+id/line4"
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginTop="3dp"
+                    android:layout_below="@+id/item_summery_list"
+                    android:background="@color/fontColor" />
+            <!--    <view
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"></view>-->
                 <ListView
                     android:id="@+id/lv_tax_menu"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
-                    android:layout_below="@+id/line2"
+                    android:layout_below="@+id/line4"
                     android:divider="@null"
                     android:dividerHeight="0dp"
                     android:nestedScrollingEnabled="true" />
