--- a/app/src/main/res/layout/menu_list_item.xml
+++ b/app/src/main/res/layout/menu_list_item.xml
@@ -12,7 +12,8 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:text="Bread Fresh Baked Sourdough"
-        android:textSize="16sp" />
+        android:textSize="16sp"
+        android:layout_toStartOf="@+id/btn_lay" />
 
     <TextView
         android:id="@+id/tv_price"
@@ -26,11 +27,10 @@
         android:id="@+id/tv_ingredients"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/tv_dish_name"
         android:text="Virgin Olive Oil | Aged balsamic Vinger"
         android:textSize="12sp"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/tv_dish_name"
         android:layout_toStartOf="@+id/btn_lay" />
 
     <LinearLayout
@@ -91,17 +91,16 @@
         android:textColor="@color/secondHeader"
         android:textStyle="bold"
 
-        />
+        android:layout_alignBottom="@+id/btn_lay" />
 
-    <LinearLayout
+    <TextView
         android:id="@+id/ll_checkboxItems"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/tv_add_item"
-        android:layout_alignParentStart="true"
+        android:orientation="horizontal"
         android:layout_below="@+id/tv_ingredients"
-        android:layout_toStartOf="@+id/btn_lay"
-        android:orientation="horizontal"></LinearLayout>
+        android:layout_alignParentStart="true"
+        android:layout_toStartOf="@+id/btn_lay"></TextView>
 
 
 </RelativeLayout>
