--- a/app/src/main/res/layout/summery_list_item.xml
+++ b/app/src/main/res/layout/summery_list_item.xml
@@ -10,12 +10,12 @@
         android:id="@+id/tv_summery_item_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
         android:text="fjdksjfj"
-        android:textSize="14sp"
-        android:textStyle="bold" />
+        android:textSize="12sp"
+        android:textStyle="bold"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:layout_toStartOf="@+id/tv_item_total_price" />
 
     <TextView
         android:id="@+id/tv_item_total_price"
@@ -24,8 +24,10 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
+        android:gravity="right"
+        android:layout_toEndOf="@+id/ll_checkboxItems"
         android:text="sdsajdj"
-        android:textSize="14sp"
+        android:textSize="12sp"
         android:textStyle="bold" />
 
     <TextView
@@ -36,9 +38,9 @@
         android:layout_alignParentStart="true"
         android:layout_below="@+id/tv_summery_item_name"
         android:text="Charges"
-        android:visibility="gone"
         android:textSize="14sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:visibility="gone" />
 
     <TextView
         android:id="@+id/tv_service_charges"
@@ -50,19 +52,6 @@
         android:layout_marginLeft="5dp"
         android:text="Serv. Charge"
         android:visibility="gone"
-        android:textSize="12sp" />
-
-    <TextView
-        android:id="@+id/tv_vat"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/tv_service_charges"
-        android:text="VAT. Tax"
-
-        android:visibility="gone"
-        android:layout_marginLeft="5dp"
         android:textSize="12sp" />
 
     <TextView
@@ -78,6 +67,19 @@
         android:textSize="12sp"
         android:layout_alignLeft="@+id/tv_service_charges_value"
         android:layout_alignStart="@+id/tv_service_charges_value" />
+
+    <TextView
+        android:id="@+id/tv_vat"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/tv_service_charges"
+        android:layout_marginLeft="5dp"
+
+        android:text="VAT. Tax"
+        android:textSize="12sp"
+        android:visibility="gone" />
 
     <TextView
         android:id="@+id/tv_service_tax"
@@ -106,13 +108,11 @@
         android:id="@+id/btn_lay"
         android:layout_width="90dp"
         android:layout_height="30dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
         android:background="@drawable/rounded_corner"
         android:orientation="horizontal"
         android:layout_below="@+id/ll_checkboxItems"
-        android:layout_alignParentLeft="true"
-        >
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="5dp">
 
         <TextView
             android:id="@+id/tv_minus"
@@ -154,19 +154,19 @@
         android:layout_below="@+id/tv_total"
         android:layout_marginRight="10dp"
         android:gravity="center|bottom"
-        android:text="X"
+        android:text="              X"
         android:textColor="@color/colorAccent" />
 
     <TextView
         android:id="@+id/tv_service_charges_value"
         android:layout_width="60dp"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/tv_vat_value"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
         android:text="$ 1.6"
         android:gravity="right"
-        android:textSize="12sp" />
+        android:textSize="12sp"
+        android:visibility="gone"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true" />
 
     <TextView
         android:id="@+id/tv_service_tax_value"
@@ -207,15 +207,15 @@
         android:layout_below="@+id/tv_summery_item_name"
         android:layout_alignEnd="@+id/tv_summery_item_name" />
 
-    <LinearLayout
+    <TextView
         android:id="@+id/ll_checkboxItems"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_below="@+id/tv_summery_item_name"
-        android:layout_toEndOf="@+id/charges_heading">
+        android:layout_toStartOf="@+id/tv_close">
 
 
-    </LinearLayout>
+    </TextView>
 
 </RelativeLayout>
