--- a/app/src/main/res/layout/tax_items.xml
+++ b/app/src/main/res/layout/tax_items.xml
@@ -12,8 +12,10 @@
         android:textSize="13sp"
         android:padding="5dp"
         android:id="@+id/tv_tax_name"
+        android:text="textVIew"
         android:textColor="@color/fontColor"
-        android:layout_weight=".7" />
+        android:layout_weight=".7"
+        android:gravity="right"/>
     <TextView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
