--- a/app/src/main/res/layout/menu_list_item.xml
+++ b/app/src/main/res/layout/menu_list_item.xml
@@ -98,6 +98,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:textSize="12sp"
         android:layout_below="@+id/tv_ingredients"
         android:layout_alignParentStart="true"
         android:layout_toStartOf="@+id/btn_lay"></TextView>
