--- a/app/src/main/res/layout/menu_list_item.xml
+++ b/app/src/main/res/layout/menu_list_item.xml
@@ -29,6 +29,7 @@
         android:layout_height="wrap_content"
         android:text="Virgin Olive Oil | Aged balsamic Vinger"
         android:textSize="12sp"
+        android:layout_marginRight="5dp"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/tv_dish_name"
         android:layout_toStartOf="@+id/btn_lay" />
@@ -99,6 +100,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:textSize="12sp"
+        android:layout_marginRight="5dp"
         android:layout_below="@+id/tv_ingredients"
         android:layout_alignParentStart="true"
         android:layout_toStartOf="@+id/btn_lay"></TextView>
