--- a/app/src/main/res/layout/order_summary_items.xml
+++ b/app/src/main/res/layout/order_summary_items.xml
@@ -20,15 +20,15 @@
 
     <TextView
         android:id="@+id/tv_item_name"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:gravity="center"
+        android:gravity="left"
         android:padding="2dp"
         android:text="TextView"
-        android:textAlignment="textStart" />
+        android:layout_toStartOf="@+id/tv_item_price" />
 
     <TextView
         android:id="@+id/tv_item_price"
