--- a/app/src/main/res/layout/booking_history_activity.xml
+++ b/app/src/main/res/layout/booking_history_activity.xml
@@ -43,7 +43,7 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:text="Date" />
+            android:text="@string/Date" />
 
         <TextView
             android:id="@+id/tv_data_time"
@@ -66,7 +66,7 @@ android:textStyle="bold"
             android:layout_below="@+id/Date"
             android:layout_toLeftOf="@+id/tv_data_time"
             android:layout_toStartOf="@+id/tv_data_time"
-            android:text="Rest. Name" />
+            android:text="@string/Rest.Name" />
 
         <TextView
             android:id="@+id/booking_id"
@@ -75,7 +75,7 @@ android:textStyle="bold"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_below="@+id/rest.name"
-            android:text="Order ID" />
+            android:text="@string/OrderID" />
 
         <TextView
             android:id="@+id/desctiption"
@@ -86,7 +86,7 @@ android:textStyle="bold"
             android:layout_alignParentStart="true"
             android:layout_alignRight="@+id/rest.name"
             android:layout_below="@+id/booking_id"
-            android:text="Description" />
+            android:text="@string/Description" />
 
         <TextView
             android:id="@+id/table_no"
@@ -98,14 +98,14 @@ android:textStyle="bold"
             android:layout_below="@+id/desctiption"
             android:layout_toLeftOf="@+id/tv_descrption"
             android:layout_toStartOf="@+id/tv_descrption"
-            android:text="Table No" />
+            android:text="@string/TableNo" />
 
         <TextView
             android:id="@+id/quantity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/table_no"
-            android:text="Quantity" />
+            android:text="@string/Quantity" />
 
         <TextView
             android:id="@+id/order_status"
@@ -114,7 +114,7 @@ android:textStyle="bold"
             android:layout_alignEnd="@+id/desctiption"
             android:layout_alignRight="@+id/desctiption"
             android:layout_below="@+id/quantity"
-            android:text="Amount" />
+            android:text="@string/Amount" />
 
         <TextView
             android:id="@+id/tv_rest_name"
