--- a/app/src/main/res/layout/activity_view_cart.xml
+++ b/app/src/main/res/layout/activity_view_cart.xml
@@ -152,7 +152,7 @@
                 android:layout_alignParentStart="true"
                 android:layout_below="@+id/cb_take_away"
                 android:gravity="left|center"
-                android:text="Table No  "
+                android:text="@string/table_no"
                 android:textSize="15sp"
                 android:textStyle="bold"
                 android:layout_alignEnd="@+id/tv_estimated" />
