--- a/app/src/main/res/layout/book_a_table.xml
+++ b/app/src/main/res/layout/book_a_table.xml
@@ -37,7 +37,7 @@
             android:layout_height="40dp"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:text="Enter table no:"
+            android:text="@string/enter_table_no"
            android:gravity="left|center_vertical"
             android:layout_alignParentTop="true"
             android:textSize="18sp"
@@ -165,7 +165,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:background="@drawable/button_rounded_corner"
-        android:text="View Menu"
+        android:text="@string/View_Menu"
         android:textSize="24sp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
