--- a/app/src/main/res/layout/booking_history_items.xml
+++ b/app/src/main/res/layout/booking_history_items.xml
@@ -16,7 +16,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:text="Date" />
+        android:text="@string/Date" />
 
     <TextView
         android:id="@+id/tv_data_time"
@@ -36,7 +36,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/Date"
-        android:text="Rest. Name"
+        android:text="@string/Rest.Name"
         android:layout_toLeftOf="@+id/tv_data_time"
         android:layout_toStartOf="@+id/tv_data_time" />
 
@@ -47,14 +47,14 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/rest.name"
-        android:text="Booking ID" />
+        android:text="@string/BookingID" />
 
     <TextView
         android:id="@+id/desctiption"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/booking_id"
-        android:text="Description"
+        android:text="@string/Description"
         android:layout_alignRight="@+id/rest.name"
         android:layout_alignEnd="@+id/rest.name"
         android:layout_alignParentLeft="true"
@@ -68,13 +68,13 @@
 
         android:layout_alignParentStart="true"
         android:layout_below="@+id/desctiption"
-        android:text="Table No"
+        android:text="@string/table_no"
         android:layout_toLeftOf="@+id/tv_descrption"
         android:layout_toStartOf="@+id/tv_descrption" />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Quantity"
+        android:text="@string/table_no"
         android:id="@+id/quantity"
         android:layout_below="@+id/table_no" />
     <TextView
@@ -84,7 +84,7 @@
         android:layout_alignEnd="@+id/desctiption"
         android:layout_alignRight="@+id/desctiption"
         android:layout_below="@+id/quantity"
-        android:text="Order total" />
+        android:text="@string/Ordertotal" />
 
     <TextView
         android:id="@+id/tv_rest_name"
@@ -163,7 +163,7 @@
         android:id="@+id/tv_stataus"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Status"
+        android:text="@string/Status"
         android:layout_alignBaseline="@+id/tv_order_status"
         android:layout_alignBottom="@+id/tv_order_status"
         android:layout_alignParentLeft="true"
