--- a/app/src/main/res/layout/booking_table_items.xml
+++ b/app/src/main/res/layout/booking_table_items.xml
@@ -22,7 +22,7 @@
             android:layout_below="@+id/Date"
             android:layout_weight=".5"
             android:textColor="@color/fontColor"
-            android:text="Date"
+            android:text="@string/Date"
             android:maxLines="1"
             android:textStyle="bold"/>
 
@@ -51,7 +51,7 @@
             android:layout_below="@+id/Date"
             android:layout_weight=".5"
             android:textColor="@color/fontColor"
-            android:text="Rest. Name" />
+            android:text="@string/Rest.Name" />
 
         <TextView
             android:id="@+id/tv_rest_name"
@@ -77,7 +77,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight=".5"
-            android:text="Order ID"
+            android:text="@string/Order_id"
             android:textColor="@color/fontColor" />
 
         <TextView
@@ -103,7 +103,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/desctiption"
             android:layout_weight=".5"
-            android:text="Description"
+            android:text="@string/Description"
             android:textColor="@color/fontColor" />
 
         <TextView
@@ -129,7 +129,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/desctiption"
             android:layout_weight=".5"
-            android:text="Table No"
+            android:text="@string/table_no"
             android:textColor="@color/fontColor" />
 
         <TextView
@@ -157,7 +157,7 @@
             android:layout_below="@+id/desctiption"
             android:textColor="@color/fontColor"
             android:layout_weight=".5"
-            android:text="Bill No" />
+            android:text="@string/BillNo" />
 
 
         <TextView
@@ -184,7 +184,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/desctiption"
             android:layout_weight=".5"
-            android:text="Bill Amount"
+            android:text="@string/Bill_Amount"
             android:textColor="@color/fontColor" />
 
 
@@ -214,7 +214,7 @@
             android:layout_below="@+id/quantity"
             android:layout_weight=".5"
             android:textColor="@color/fontColor"
-            android:text="Status" />
+            android:text="@string/Status" />
 
 
         <TextView
